--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,12 +45,12 @@
 
       - name: Loft use vcluster
         run: |
-          ./loft use vcluster $VCLUSTERNAME --print --silent
+          ./loft use vcluster $VCLUSTERNAME --print --silent > kube_config
 
       - name: Get all objects
         run: |
-          ./kubectl get all --all-namespaces
+          ./kubectl --kubeconfig='kube_config' get all --all-namespaces
 
       - name: Cleanup (Loft delete vcluster)
         run: |
-          ./loft delete vcluster $VCLUSTERNAME 
+          ./loft delete vcluster $VCLUSTERNAME
