--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,11 +45,11 @@
 
       - name: Loft use vcluster
         run: |
-          ./loft use vcluster $VCLUSTERNAME --print --silent > kube_config
+          ./loft use vcluster $VCLUSTERNAME
 
       - name: Get all objects
         run: |
-          ./kubectl --kubeconfig='kube_config' get all --all-namespaces
+          ./kubectl get all --all-namespaces
 
       - name: Cleanup (Loft delete vcluster)
         run: |
