--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@
 
   env:
     LOFT_VERSION: '1.7.2'
-    LOFT_URL: ${{ secrets.LOFT_URL }}
+    LOFT_URL: 'https://loft.l3v.co'
     LOFT_USERNAME: ${{ secrets.LOFT_USERNAME }}
     LOFT_ACCESS_KEY: ${{ secrets.LOFT_ACCESS_KEY }}
     VCLUSTER_NAME: 'ci'
